
=== Bug fixes ===
 * #778 (DirectionalSampling is unstable)
 * #915 (Distribution.computeQuantile properties)
 * #949 (LowDiscrepancyExperiment for distributions having dependent copula)
 * #952 (Limitation on distribution type for polynomial chaos?)
 * #953 (RandomMixture can fail with truncated distribution)
 * #954 (CompositeProcess::getFuture() broken)
 * #957 (RandomMixture::getDispersionIndicator() takes a long time)
 * #958 (The Sobol' indices plot is wrong for chaos)
 * #959 (The PolygonArray and Polygon classes poorly manage the colors)
 * #960 (Polygon sometimes make OT crash)
 * #961 (The PolygonArray class seem to ignore the legends)
 * #962 (The doc of MetaModelValidation.computePredictivityFactor is wrong)
 * #963 (VisualTest_DrawHistogram sometimes has overlapping X labels)
 * #964 (Study does not load LogNormalMuSigma variables from XML)
 * #965 (A RandomVector from a RandomVector can make OT crash)
 * #968 (Empty legend make OT crash)
 * #970 (Composing gaussian copulas can crash the chaos)

== 1.11 release (2018-05-11) == #release-1.11

=== Library ===

==== Major changes ====

==== New classes ====
 * FrechetFactory
 * Fehlberg
 * TranslationFunction
 * DomainComplement, DomainIntersection, DomainUnion, DomainDisjunctiveUnion, DomainDifference
 * SmoothedUniform
 * NearestNeighbourAlgorithm, RegularGridNearestNeighbour, NaiveNearestNeighbour, NearestNeighbour1D
 * EnclosingSimplex, EnclosingSimplexImplementation, NaiveEnclosingSimplex, RegularGridEnclosingSimplex, EnclosingSimplexMonotonic1D, BoundingVolumeHierarchy
 * IndicesCollection
 * SymbolicParserExprTk
 * EvaluationProxy
 * MemoizeFunction, MemoizeEvaluation
 * Evaluation, Gradient, Hessian
 * MeshDomain
 * NormInfEnumerateFunction
 * FunctionalChaosSobolIndices
 * P1LagrangeInterpolation
 * FilonQuadrature

==== API changes ====
 * Removed deprecated NumericalMathFunction class
 * Removed deprecated QuadraticNumericalMathFunction class