@@ -1,6 +1,8 @@
-Distribution          =class=Student name=Student dimension=1 nu=3.5 mean=class=Point name=Unnamed dimension=1 values=[2.5] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
-Estimated distribution=class=Student name=Student dimension=1 nu=3.58491 mean=class=Point name=Unnamed dimension=1 values=[2.52108] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
+Distribution          =class=Student name=Student dimension=1 nu=3.5 mean=class=Point name=Unnamed dimension=1 values=[2.5] sigma=class=Point name=Unnamed dimension=1 values=[2] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
+Estimated distribution=class=Student name=Student dimension=1 nu=3.6 mean=class=Point name=Unnamed dimension=1 values=[2.54] sigma=class=Point name=Unnamed dimension=1 values=[2.01] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
+Distribution          =class=Student name=Student dimension=2 nu=4.5 mean=class=Point name=Unnamed dimension=2 values=[2.5,2.5] sigma=class=Point name=Unnamed dimension=2 values=[1.5,1.5] correlationMatrix=class=CorrelationMatrix dimension=2 implementation=class=MatrixImplementation name=Unnamed rows=2 columns=2 values=[1,0.5,0.5,1]
+Estimated distribution=class=Student name=Student dimension=2 nu=4.54 mean=class=Point name=Unnamed dimension=2 values=[2.46,2.44] sigma=class=Point name=Unnamed dimension=2 values=[1.52,1.5] correlationMatrix=class=CorrelationMatrix dimension=2 implementation=class=MatrixImplementation name=Unnamed rows=2 columns=2 values=[1,0.505,0.505,1]
+Distribution          =class=Student name=Student dimension=10 nu=4.5 mean=class=Point name=Unnamed dimension=10 values=[0,0.5,1,1.5,2,2.5,3,3.5,4,4.5] sigma=class=Point name=Unnamed dimension=10 values=[0.5,1.5,2.5,3.5,4.5,5.5,6.5,7.5,8.5,9.5] correlationMatrix=class=CorrelationMatrix dimension=10 implementation=class=MatrixImplementation name=Unnamed rows=10 columns=10 values=[1,0.333,0.25,0.2,0.167,0.143,0.125,0.111,0.1,0.0909,0.333,1,0.2,0.167,0.143,0.125,0.111,0.1,0.0909,0.0833,0.25,0.2,1,0.143,0.125,0.111,0.1,0.0909,0.0833,0.0769,0.2,0.167,0.143,1,0.111,0.1,0.0909,0.0833,0.0769,0.0714,0.167,0.143,0.125,0.111,1,0.0909,0.0833,0.0769,0.0714,0.0667,0.143,0.125,0.111,0.1,0.0909,1,0.0769,0.0714,0.0667,0.0625,0.125,0.111,0.1,0.0909,0.0833,0.0769,1,0.0667,0.0625,0.0588,0.111,0.1,0.0909,0.0833,0.0769,0.0714,0.0667,1,0.0588,0.0556,0.1,0.0909,0.0833,0.0769,0.0714,0.0667,0.0625,0.0588,1,0.0526,0.0909,0.0833,0.0769,0.0714,0.0667,0.0625,0.0588,0.0556,0.0526,1]
+Estimated distribution=class=Student name=Student dimension=10 nu=4.47 mean=class=Point name=Unnamed dimension=10 values=[0.00184,0.496,1.03,1.52,1.96,2.67,3.08,3.51,4.08,4.64] sigma=class=Point name=Unnamed dimension=10 values=[0.502,1.52,2.52,3.56,4.46,5.54,6.43,7.59,8.44,9.51] correlationMatrix=class=CorrelationMatrix dimension=10 implementation=class=MatrixImplementation name=Unnamed rows=10 columns=10 values=[1,0.337,0.258,0.206,0.173,0.149,0.129,0.115,0.0786,0.0988,0.337,1,0.206,0.156,0.168,0.127,0.126,0.103,0.0827,0.084,0.258,0.206,1,0.151,0.146,0.111,0.112,0.0816,0.0863,0.0674,0.206,0.156,0.151,1,0.126,0.105,0.117,0.0861,0.0504,0.0643,0.173,0.168,0.146,0.126,1,0.0913,0.0778,0.0643,0.0681,0.0628,0.149,0.127,0.111,0.105,0.0913,1,0.107,0.0974,0.0619,0.0627,0.129,0.126,0.112,0.117,0.0778,0.107,1,0.0382,0.0631,0.0577,0.115,0.103,0.0816,0.0861,0.0643,0.0974,0.0382,1,0.0645,0.0719,0.0786,0.0827,0.0863,0.0504,0.0681,0.0619,0.0631,0.0645,1,0.0498,0.0988,0.084,0.0674,0.0643,0.0628,0.0627,0.0577,0.0719,0.0498,1]
 Default distribution=class=Student name=Student dimension=1 nu=3 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
-Student          =class=Student name=Student dimension=1 nu=3.5 mean=class=Point name=Unnamed dimension=1 values=[2.5] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
-Estimated student=class=Student name=Student dimension=1 nu=3.58491 mean=class=Point name=Unnamed dimension=1 values=[2.52108] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
 Default student=class=Student name=Student dimension=1 nu=3 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
