@@ -1,6 +1,52 @@
-distribution= class=Student name=Student dimension=1 nu=3.5 mean=class=Point name=Unnamed dimension=1 values=[2.5] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
-Estimated distribution= class=Student name=Student dimension=1 nu=3.58491 mean=class=Point name=Unnamed dimension=1 values=[2.52108] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
+distribution= Student(nu = 3.5, mu = 2.5, sigma = 1)
+Estimated distribution= Student(nu = 3.6, mu = 2.52, sigma = 1)
+distribution= Student(nu = 4.5, mu = [2.5,2.5], sigma = [1.5,1.5], R = [[ 1   0.5 ]
+ [ 0.5 1   ]])
+Estimated distribution= Student(nu = 4.54, mu = [2.46,2.44], sigma = [1.52,1.5], R = [[ 1     0.505 ]
+ [ 0.505 1     ]])
+distribution= Student(nu = 4.5, mu = [0,0.5,1,1.5,2,2.5,3,3.5,4,4.5]#10, sigma = [0.5,1.5,2.5,3.5,4.5,5.5,6.5,7.5,8.5,9.5]#10, R = 10x10
+[[ 1       0.111   0.0625  0.04    0.0278  0.0204  0.0156  0.0123  0.01    0.00826 ]
+ [ 0.111   1       0.04    0.0278  0.0204  0.0156  0.0123  0.01    0.00826 0.00694 ]
+ [ 0.0625  0.04    1       0.0204  0.0156  0.0123  0.01    0.00826 0.00694 0.00592 ]
+ [ 0.04    0.0278  0.0204  1       0.0123  0.01    0.00826 0.00694 0.00592 0.0051  ]
+ [ 0.0278  0.0204  0.0156  0.0123  1       0.00826 0.00694 0.00592 0.0051  0.00444 ]
+ [ 0.0204  0.0156  0.0123  0.01    0.00826 1       0.00592 0.0051  0.00444 0.00391 ]
+ [ 0.0156  0.0123  0.01    0.00826 0.00694 0.00592 1       0.00444 0.00391 0.00346 ]
+ [ 0.0123  0.01    0.00826 0.00694 0.00592 0.0051  0.00444 1       0.00346 0.00309 ]
+ [ 0.01    0.00826 0.00694 0.00592 0.0051  0.00444 0.00391 0.00346 1       0.00277 ]
+ [ 0.00826 0.00694 0.00592 0.0051  0.00444 0.00391 0.00346 0.00309 0.00277 1       ]])
+Estimated distribution= Student(nu = 4.47, mu = [0.00184,0.494,1.03,1.51,1.95,2.67,3.07,3.49,4.06,4.62]#10, sigma = [0.502,1.52,2.51,3.57,4.43,5.53,6.4,7.58,8.47,9.53]#10, R = 10x10
+[[  1         0.119     0.0719    0.0508    0.0326    0.0269    0.019     0.0166   -0.0122    0.0148   ]
+ [  0.119     1         0.047     0.0129    0.0444    0.0173    0.0215    0.016    -0.0017    0.00538  ]
+ [  0.0719    0.047     1         0.0271    0.0314    0.0108    0.0157   -0.0025    0.0092   -0.00676  ]
+ [  0.0508    0.0129    0.0271    1         0.0246    0.013     0.0306    0.00919  -0.0199   -0.00445  ]
+ [  0.0326    0.0444    0.0314    0.0246    1         0.0037   -0.00537  -0.00726   0.00417   6.28e-08 ]
+ [  0.0269    0.0173    0.0108    0.013     0.0037    1         0.0339    0.0322   -0.000494  0.00256  ]
+ [  0.019     0.0215    0.0157    0.0306   -0.00537   0.0339    1        -0.0266    0.00278   0.000571 ]
+ [  0.0166    0.016    -0.0025    0.00919  -0.00726   0.0322   -0.0266    1         0.0144    0.0198   ]
+ [ -0.0122   -0.0017    0.0092   -0.0199    0.00417  -0.000494  0.00278   0.0144    1         0.00243  ]
+ [  0.0148    0.00538  -0.00676  -0.00445   6.28e-08  0.00256   0.000571  0.0198    0.00243   1        ]])
 Default distribution= Student(nu = 3, mu = 0, sigma = 1)
-Student          = Student(nu = 3.5, mu = 2.5, sigma = 1)
-Estimated student= Student(nu = 3.58491, mu = 2.52108, sigma = 1)
+Student          = Student(nu = 4.5, mu = [0,0.5,1,1.5,2,2.5,3,3.5,4,4.5]#10, sigma = [0.5,1.5,2.5,3.5,4.5,5.5,6.5,7.5,8.5,9.5]#10, R = 10x10
+[[ 1       0.111   0.0625  0.04    0.0278  0.0204  0.0156  0.0123  0.01    0.00826 ]
+ [ 0.111   1       0.04    0.0278  0.0204  0.0156  0.0123  0.01    0.00826 0.00694 ]
+ [ 0.0625  0.04    1       0.0204  0.0156  0.0123  0.01    0.00826 0.00694 0.00592 ]
+ [ 0.04    0.0278  0.0204  1       0.0123  0.01    0.00826 0.00694 0.00592 0.0051  ]
+ [ 0.0278  0.0204  0.0156  0.0123  1       0.00826 0.00694 0.00592 0.0051  0.00444 ]
+ [ 0.0204  0.0156  0.0123  0.01    0.00826 1       0.00592 0.0051  0.00444 0.00391 ]
+ [ 0.0156  0.0123  0.01    0.00826 0.00694 0.00592 1       0.00444 0.00391 0.00346 ]
+ [ 0.0123  0.01    0.00826 0.00694 0.00592 0.0051  0.00444 1       0.00346 0.00309 ]
+ [ 0.01    0.00826 0.00694 0.00592 0.0051  0.00444 0.00391 0.00346 1       0.00277 ]
+ [ 0.00826 0.00694 0.00592 0.0051  0.00444 0.00391 0.00346 0.00309 0.00277 1       ]])
+Estimated student= Student(nu = 4.47, mu = [0.00184,0.494,1.03,1.51,1.95,2.67,3.07,3.49,4.06,4.62]#10, sigma = [0.502,1.52,2.51,3.57,4.43,5.53,6.4,7.58,8.47,9.53]#10, R = 10x10
+[[  1         0.119     0.0719    0.0508    0.0326    0.0269    0.019     0.0166   -0.0122    0.0148   ]
+ [  0.119     1         0.047     0.0129    0.0444    0.0173    0.0215    0.016    -0.0017    0.00538  ]
+ [  0.0719    0.047     1         0.0271    0.0314    0.0108    0.0157   -0.0025    0.0092   -0.00676  ]
+ [  0.0508    0.0129    0.0271    1         0.0246    0.013     0.0306    0.00919  -0.0199   -0.00445  ]
+ [  0.0326    0.0444    0.0314    0.0246    1         0.0037   -0.00537  -0.00726   0.00417   6.28e-08 ]
+ [  0.0269    0.0173    0.0108    0.013     0.0037    1         0.0339    0.0322   -0.000494  0.00256  ]
+ [  0.019     0.0215    0.0157    0.0306   -0.00537   0.0339    1        -0.0266    0.00278   0.000571 ]
+ [  0.0166    0.016    -0.0025    0.00919  -0.00726   0.0322   -0.0266    1         0.0144    0.0198   ]
+ [ -0.0122   -0.0017    0.0092   -0.0199    0.00417  -0.000494  0.00278   0.0144    1         0.00243  ]
+ [  0.0148    0.00538  -0.00676  -0.00445   6.28e-08  0.00256   0.000571  0.0198    0.00243   1        ]])
 Default student= Student(nu = 3, mu = 0, sigma = 1)
